# ray-kafka

./: .gitignore  Dockerfile.test  LANCEDB_REPOSITORY_BREAKDOWN.md  Makefile  README.md  docker-compose.yaml  integration_tests.py  main.py  pyproject.toml
src/: kafka_datasink.py
tests/: test_kafka_datasink.py
