[project]
name = "ray-kafka"
version = "0.1.0"
description = "Ray Kafka Datasink"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.3.0",
    "pre-commit>=4.5.1",
    "ray[data]==2.52.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
